<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="8dp">

    <!--Hauptcontent-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView2"
            android:layout_below="@+id/toolbar"
            android:layout_alignParentStart="true"
            android:background="@color/background_material_light">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:id="@+id/kastenwagen"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/kastenwagen"
                        android:background="@color/background_color"
                        android:cropToPadding="false"
                        android:minHeight="300dp"
                        android:scaleType="centerCrop"
                        android:layout_margin="0dp"
                        android:onClick="onKastenwagenClick" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        android:id="@+id/kastenwagen_text_layout"
                        android:background="@color/secondary_alpha"
                        android:elevation="0dp"
                        android:layout_gravity="start|bottom"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kastenwagen_title"
                            android:id="@+id/kastenwagen_Text"
                            android:layout_weight="0"
                            android:layout_gravity="left|bottom"
                            android:layout_marginLeft="5dp"
                            android:clickable="true"
                            android:textColor="@color/homescreen_text_color"
                            android:textSize="@dimen/abc_text_size_headline_material"
                            android:textStyle="bold"
                            android:layout_marginTop="5dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kastenwagen_teaser"
                            android:id="@+id/kastenwagen_teaser"
                            android:layout_gravity="left|bottom"
                            android:layout_weight="0"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="5dp"
                            android:textColor="@color/homescreen_text_color"
                            android:clickable="true" />
                    </LinearLayout>

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageButton
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:minHeight="300dp"
                        android:id="@+id/reisemobile"
                        android:src="@drawable/reisemobile"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:background="@color/background_color"
                        android:scaleType="centerCrop"
                        android:layout_margin="0dp"
                        android:nestedScrollingEnabled="false"
                        android:onClick="onReisemobileClick" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|bottom"
                        android:layout_gravity="left|bottom"
                        android:focusableInTouchMode="false"
                        android:id="@+id/reisemobile_text_layout"
                        android:background="@color/secondary_alpha"
                        android:elevation="0dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/reisemobile_title"
                            android:id="@+id/reisemobile_Text"
                            android:layout_weight="0"
                            android:layout_gravity="left|bottom"
                            android:layout_marginLeft="5dp"
                            android:clickable="true"
                            android:textColor="@color/homescreen_text_color"
                            android:textSize="@dimen/abc_text_size_headline_material"
                            android:textStyle="bold"
                            android:layout_marginTop="5dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/reisemobile_teaser"
                            android:id="@+id/reisemobile_teaser"
                            android:layout_gravity="left|bottom"
                            android:layout_weight="0"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="5dp"
                            android:textColor="@color/homescreen_text_color"
                            android:clickable="true" />
                    </LinearLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="300dp"
                        android:id="@+id/caravans"
                        android:src="@drawable/caravans"
                        android:background="@color/background_color"
                        android:scaleType="centerCrop"
                        android:layout_margin="0dp"
                        android:onClick="onCaravansClick" />
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|bottom"
                        android:id="@+id/caravans_text_layout"
                        android:background="@color/secondary_alpha"
                        android:elevation="0dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/caravans_title"
                            android:id="@+id/caravans_Text"
                            android:gravity="start|bottom"
                            android:layout_marginLeft="5dp"
                            android:clickable="true"
                            android:textColor="@color/homescreen_text_color"
                            android:textSize="@dimen/abc_text_size_headline_material"
                            android:textStyle="bold"
                            android:layout_marginTop="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/caravans_teaser"
                            android:id="@+id/caravans_teaser"
                            android:gravity="start|bottom"
                            android:layout_marginLeft="5dp"
                            android:layout_marginBottom="10dp"
                            android:textColor="@color/homescreen_text_color"
                            android:clickable="true"/>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>



        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/howTo_1"
            android:elevation="4dp"
            android:touchscreenBlocksFocus="false">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/imageView2"
                android:src="@drawable/howto_startscreen"
                android:scaleType="centerCrop"
                android:background="@null" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Weiter"
                android:id="@+id/howto_weiter"
                android:onClick="onHowToWeiter"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:background="@color/main_color"
                android:elevation="2dp" />
        </RelativeLayout>

    </RelativeLayout>

    <!--Navigation-->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/RecyclerView"
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="#ffffff"
        android:scrollbars="vertical">

    </android.support.v7.widget.RecyclerView>
</android.support.v4.widget.DrawerLayout>